--- a/index.html
+++ b/index.html
@@ -15,24 +15,19 @@
 		<div class="container">
 			<div style="flex-basis: 74%">
 				<p>
-				I'm a fifth-year PhD student in the
-				<a href="https://nlp.cs.princeton.edu/">Princeton NLP group</a>,
-				working with
-				<a href="https://www.cs.princeton.edu/~danqic/">Danqi Chen</a>.
-				For the summer and fall of 2023, I was a student researcher at Google Research, where I was advised by
-				<a href="https://web.media.mit.edu/~asma_gh/">Asma Ghandeharioun</a> and
-				<a href="https://lampinen.github.io/">Andrew Lampinen</a>.
-				Before this I was a software engineer at Google and IBM,
-				and before that I was an undergraduate at Yale where I worked
-				with <a href="https://bobfrank1.github.io/">Bob Frank</a> and
-				<a href="http://www.cs.yale.edu/homes/radev/">Dragomir Radev</a>,
-				and received a BA in English.
+				I am a second-year MsC student in the Department of Computer Science at University of Copenhagen, 
+				advised by <a href="https://danielhers.github.io/">Daniel Hershcovich</a> 
+				and <a href="https://di.ku.dk/english/staff/?pure=en/persons/641366">Maria Maistro</a>.	
+				I was a Researcher and Engineer in Basic Search Team at Baidu Search during 2018-2022, 
+				where I worked on improving the timeliness of the search engine.
+				I led a small machine learning team working on the 'Hot Discussion' project, 
+				aimed at enhancing the timeliness and content diversity in search engines by providing social media results like Weibo.
+				and before that I was an undergraduate at Dalian University of Technology and recieved my BSc in Software Engineering in 2019.
 				</p>
 				<p style="text-align:center">
-				<a href="mailto:dfriedman@princeton.edu">Email</a> &nbsp;/&nbsp;
+				<a href="mailto:tenneyhu@gmail.com">Email</a> &nbsp;/&nbsp;
 				<a href="https://scholar.google.com/citations?user=1UMQ_KwAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
-				<a href="https://twitter.com/danfriedman0">Twitter</a> &nbsp;/&nbsp;
-				<a href="https://github.com/danfriedman0/">Github</a>
+				<a href="https://github.com/TenneyHu/">Github</a>
 				</p>
 			</div>
 			<img src="profile.jpg" width="200" height="246" style="flex-basis: 24%">
@@ -54,7 +49,7 @@
 			Princeton Center for Digital Humanities
 		</a>.
 		</p>
-		<h2>Publications and preprints</h2>
+		<h2>Publications</h2>
 		<ul>
 			<li>
 				<a class="paper" href="https://arxiv.org/abs/2407.10949">
