--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				advised by <a href="https://danielhers.github.io/">Daniel Hershcovich</a> 
 				and <a href="https://di.ku.dk/english/staff/?pure=en/persons/641366">Maria Maistro</a>.	
 				I was a Researcher and Engineer in Basic Search Team at Baidu Search during 2018-2022, 
-				where I worked on improving the timeliness of the search engine.
-				I led a small machine learning team working on the 'Hot Discussion' project, 
+				where I worked on improving the timeliness of the search engine,
+				I led a small machine learning team working on the Hot Discussion project, 
 				aimed at enhancing the timeliness and content diversity in search engines by providing social media results like Weibo.
 				and before that I was an undergraduate at Dalian University of Technology and recieved my BSc in Software Engineering in 2019.
 				</p>
@@ -32,35 +32,37 @@
 			</div>
 			<img src="profile.jpg" width="200" height="246" style="flex-basis: 24%">
 		</div>
+
 		<h2>Research Interests</h2>
 		<p>
-		I'm currently interested in making large, neural language models easier to understand.
-		One direction I'm especially interested in is to design models that are
-		<a href="https://arxiv.org/abs/2306.01128">inherently interpretable</a>,
-		so that we can automatically convert models into formats that are easier to inspect and understand, such as discrete computer programs.
-		I'm also interested in approaches that take a more behavioral view, to better characterize the strengths and limitations of large language models
-		(<a href="https://arxiv.org/abs/2309.13638">example 1</a>;
-		<a href="https://arxiv.org/abs/2305.13299">example 2</a>).
-		Some of my more general interests include unsupervised structure learning, formal languages,
-		probabilistic models, and inductive bias.
-		I'm also interested in applications of NLP to humanities research
-		and am involved with the
-		<a href="https://cdh.princeton.edu/">
-			Princeton Center for Digital Humanities
-		</a>.
+		I'm currently interested in Natural Language Processing and Information Retrieval.
+		One direction I'm especially interested in is to design models 
+		that incorporate the knowledge and values of people from different cultural backgrounds.
+		I'm also interested in NLP for Positive Impact, MultiLingual NLP, Trustworthy NLP and Human Centered NLP.
 		</p>
+
+		<h2>News</h2>
+		<ul>
+			<li>
+				<br>
+				[2024.09] I start exchange study at National Taiwan University in Taipei, Taiwan for one semester.
+				<br>
+			</li>
+			<br>
+		</ul>
+
 		<h2>Publications</h2>
 		<ul>
 			<li>
-				<a class="paper" href="https://arxiv.org/abs/2407.10949">
-					Representing Rule-based Chatbots with Transformers
+				<a class="paper" href="NULL">
+					Bridging Cultures in the Kitchen: A Framework and Benchmark for Cross-Cultural Recipe Retrieval
 				</a>
 				<br>
-				<strong>Dan Friedman</strong>, Abhishek Panigrahi, Danqi Chen
+				<strong>Tianyi Hu</strong>, Maria Maistro, Daniel Hershcovich
 				<br>
-				arXiv 2024
+				Under review
 				<br>
-				<a href="https://arxiv.org/abs/2407.10949">Paper</a> | <a href="https://github.com/princeton-nlp/ELIZA-Transformer">Code</a>
+				<a href="TBD">Paper</a> | <a href="TBD">Code</a>
 			</li>
 			<br>
 		</ul>
