--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
 		I'm currently interested in Natural Language Processing and Information Retrieval.
 		One direction I'm especially interested in is to design models 
 		that incorporate the knowledge and values of people from different cultural backgrounds.
-		I'm also interested in NLP for Positive Impact, MultiLingual NLP, Trustworthy NLP and Human Centered NLP.
+		I'm also interested in NLP for Positive Impact, Multilingual NLP, Trustworthy NLP and Human-Centered NLP.
 		</p>
 
 		<h2>News</h2>
 		<ul>
 			<li>
-				<br>
 				[2024.09] I start exchange study at National Taiwan University in Taipei, Taiwan for one semester.
 				<br>
 			</li>
@@ -53,12 +52,26 @@
 
 		<h2>Publications</h2>
 		<ul>
+			<small>* These authors contributed equally to this work.</small>
+			<br>
 			<li>
 				<a class="paper" href="NULL">
 					Bridging Cultures in the Kitchen: A Framework and Benchmark for Cross-Cultural Recipe Retrieval
 				</a>
 				<br>
 				<strong>Tianyi Hu</strong>, Maria Maistro, Daniel Hershcovich
+				<br>
+				Under review
+				<br>
+				<a href="TBD">Paper</a> | <a href="TBD">Code</a>
+			</li>
+			<br>
+			<li>
+				<a class="paper" href="NULL">
+					CL-Attack: Textual Backdoor Attacks via Cross-Lingual Triggers
+				</a>
+				<br>
+				Jingyi Zheng*, <strong>Tianyi Hu*</strong>, Tianshuo Cong, Xinlei He
 				<br>
 				Under review
 				<br>
