--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 		</ul>
 
 		<h2>Publications</h2>
+		<br>
+		<small>* represents authors contributed equally to this work.</small>
+		<br>
 		<ul>
-			<small>* These authors contributed equally to this work.</small>
-			<br>
 			<li>
 				<a class="paper" href="NULL">
 					Bridging Cultures in the Kitchen: A Framework and Benchmark for Cross-Cultural Recipe Retrieval
