--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 		</ul>
 
 		<h2>Publications</h2>
-		<br>
-		<small>* represents authors contributed equally to this work.</small>
+		* represents authors contributed equally to this work.
 		<br>
 		<ul>
 			<li>
