--- a/index.html
+++ b/index.html
@@ -79,6 +79,20 @@
 			</li>
 			<br>
 		</ul>
+
+		<h2>About Me</h2>
+		<ul>
+			<li>
+				The <a href="avatar.jpg">Profile photo</a> I often use, is from a photo of Riho Yoshioka in the Japanese television drama 'Unnatural'.
+				<br>
+			</li>
+			<li>
+				I have a lovely cat named <a href="cat.jpg">ZhuZhu</a> (literally: Piggy).
+				<br>
+			</li>
+			<br>
+		</ul>
+
 	</body>
 
 </html>
