--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<h2>About Me</h2>
 		<ul>
 			<li>
-				The <a href="avatar.jpg">Profile photo</a> I often use, is from a photo of Riho Yoshioka in the Japanese television drama 'Unnatural'.
+				The <a href="avatar.jpg">Profile photo</a> I often use, is from a photo of <a href="Ishihara.jpg">Satomi Ishihara</a> in the Japanese television drama 'Unnatural'.
 				<br>
 			</li>
 			<li>
