--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				where I worked on improving the timeliness of the search engine,
 				I led a small machine learning team working on the Hot Discussion project, 
 				aimed at enhancing the timeliness and content diversity in search engines by providing social media results like Weibo.
-				and before that I was an undergraduate at Dalian University of Technology and recieved my BSc in Software Engineering in 2019.
+				Before that I was an undergraduate at Dalian University of Technology and recieved my BSc in Software Engineering in 2019.
 				</p>
 				<p style="text-align:center">
 				<a href="mailto:tenneyhu@gmail.com">Email</a> &nbsp;/&nbsp;
