--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
 				<p>
 				I am a second-year MsC student in the Department of Computer Science at University of Copenhagen, 
 				advised by <a href="https://danielhers.github.io/">Daniel Hershcovich</a> 
-				and <a href="https://di.ku.dk/english/staff/?pure=en/persons/641366">Maria Maistro</a>.	
+				and <a href="https://di.ku.dk/english/staff/?pure=en/persons/641366">Maria Maistro</a>.	Before that,
 				I was a Researcher and Engineer in Basic Search Team at Baidu Search during 2018-2022, 
 				where I worked on improving the timeliness of the search engine,
-				I led a small machine learning team working on the Hot Discussion project, 
-				aimed at enhancing the timeliness and content diversity in search engines by providing social media results like Weibo.
-				Before that I was an undergraduate at Dalian University of Technology and recieved my BSc in Software Engineering in 2019.
+				I recieved my BSc in Software Engineering at Dalian University of Technology in 2019.
 				</p>
 				<p style="text-align:center">
 				<a href="mailto:tenneyhu@gmail.com">Email</a> &nbsp;/&nbsp;
@@ -35,15 +33,20 @@
 
 		<h2>Research Interests</h2>
 		<p>
-		I'm currently interested in Natural Language Processing and Information Retrieval.
-		One direction I'm especially interested in is to design models 
-		that incorporate the knowledge and values of people from different cultural backgrounds.
-		I'm also interested in NLP for Positive Impact, Multilingual NLP, Trustworthy NLP and Human-Centered NLP.
+		I'm currently interested in Natural Language Processing and Information Retrieval, 
+		particularly in areas such as Multicultural and MultiLingual NLP, Human-Centered NLP, NLP for Positive Social Impact and Trustworthy NLP.
+		Over the past year, my research has primarily focused on Cross-cultural NLP to assist people from diverse cultural backgrounds.
+		
+
 		</p>
 
 		<h2>News</h2>
 		<ul>
 			<li>
+				[2024.10] One paper accepted to EMNLP 2024.
+				<br>
+				[2024.09] I am granted the Demark Governmental Scholarship for outstanding academic performance in my first year (Grade 11.5/12.0)
+				<br>
 				[2024.09] I start exchange study at National Taiwan University in Taipei, Taiwan for one semester.
 				<br>
 			</li>
@@ -61,11 +64,13 @@
 				<br>
 				<strong>Tianyi Hu</strong>, Maria Maistro, Daniel Hershcovich
 				<br>
-				Under review
+				EMNLP 2024 (Main)
 				<br>
 				<a href="TBD">Paper</a> | <a href="TBD">Code</a>
 			</li>
+			
 			<br>
+			<!--
 			<li>
 				<a class="paper" href="NULL">
 					CL-Attack: Textual Backdoor Attacks via Cross-Lingual Triggers
@@ -77,6 +82,7 @@
 				<br>
 				<a href="TBD">Paper</a> | <a href="TBD">Code</a>
 			</li>
+			-->
 			<br>
 		</ul>
 
