--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</p>
 				<p style="text-align:center">
 				<a href="mailto:tenneyhu@gmail.com">Email</a> &nbsp;/&nbsp;
-				<a href="https://scholar.google.com/citations?user=1UMQ_KwAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp;
+				<!-- <a href="https://scholar.google.com/citations?user=1UMQ_KwAAAAJ&hl=en">Scholar</a> &nbsp;/&nbsp; -->
 				<a href="https://github.com/TenneyHu/">Github</a>
 				</p>
 			</div>
@@ -45,7 +45,9 @@
 			<li>
 				[2024.10] One paper accepted to EMNLP 2024.
 				<br>
+				<br>
 				[2024.09] I am granted the Demark Governmental Scholarship for outstanding academic performance in my first year (Grade 11.5/12.0)
+				<br>
 				<br>
 				[2024.09] I start exchange study at National Taiwan University in Taipei, Taiwan for one semester.
 				<br>
